MMA-7184 Flytt feilhåndtering i GrapQLExceptionHandler tilbake til DataFetcher for dokumentoversikt
...slik at vi kan returnere tom dokumentoversikt og ikke null når noe feiler